--- a/examples/basic-example.htm
+++ b/examples/basic-example.htm
@@ -15,6 +15,7 @@
 
 	<link rel="stylesheet" href="../src/leaflet-layer-tree-control.css"/>
 	<script type="text/javascript" src="../src/leaflet-layer-tree-control.js"></script>
+	<script type="text/javascript" src="../src/leaflet-layer-tree-control-wfs-zoom.js"></script>
 
 </head>
 <body>
@@ -82,7 +83,9 @@
 					"childLayers": [],
 					"selectType": null,
 					"serviceType": "WFS",
-					"params": {}
+					"params": {
+							"style": '{"fillColor": "red", "border": "blue", "weight": 3, "opacity": 0.9, "dashArray": "dashed"}'
+						    }
 				}, {
 					"code": "12",
 					"name": "Layer 12",
@@ -112,7 +115,9 @@
 					}],
 					"selectType": "SINGLE",
 					"serviceType": "WFS",
-					"params": {"234": "55555555234"}
+					"params": {"234": "55555555234",
+						    "style": '{"fillColor": "blue", "border": "green", "weight": 3, "opacity": 0.8, "dashArray": "dashed"}'
+					}
 				}],
 				"selectType": "MULTIPLE",
 				"serviceType": "WMS",
@@ -227,7 +232,9 @@
 			}],
 			"selectType": "MULTIPLE",
 			"serviceType": "WFS",
-			"params": {}
+			"params": {
+					"style": '{"fillColor": "yellow", "border": "#ddaaee", "weight": 3, "opacity": 0.8, "dashArray": "dashed"}'
+				    }
 		}];
 
 	var layerBuilders = {
@@ -249,7 +256,7 @@
 						layerBuilders: layerBuilders,
 						featureBuilders: {
 							WFS: {
-								// zoom: L.Control.LayerTreeControl.WFSZoomFeature
+								zoom: L.Control.LayerTreeControl.WFSZoomFeature
 							    }
 						}
 					}).addTo(map);
