--- a/examples/basic-example.htm
+++ b/examples/basic-example.htm
@@ -13,11 +13,15 @@
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.css"/>
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
 
+	<script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
+	<script src="http://rawgit.com/shramov/leaflet-plugins/master/layer/tile/Google.js"></script>
+	<script src="http://rawgit.com/shramov/leaflet-plugins/master/layer/tile/Bing.js"></script>
+
 	<link rel="stylesheet" href="../src/leaflet-layer-tree-control.css"/>
 	<script type="text/javascript" src="../src/leaflet-layer-tree-control.js"></script>
 	<script type="text/javascript" src="../src/leaflet-layer-tree-control-wfs-zoom.js"></script>
 
-</head>
+</head>	
 <body>
 <div style="wdith: 100%; height: 100%;">
 	<div id="map1" style="width: 100%; height: 100%;"></div>
@@ -25,220 +29,373 @@
 <script type="text/javascript">
 	var map = L.map("map1");
 	map.setView(new L.LatLng(0, 0), 1);
-	var tree = [
-		{
-			"code": "3",
-			"name": "Base Layers",
-			"active": true,
-			"selectedByDefault": false,
-			"openByDefault": true,
-			"childLayers": [
-				{
-					"code": "5",
-					"name": "Base Layers Group 1",
-					"active": true,
-					"selectedByDefault": true,
-					"openByDefault": true,
-					"childLayers": [
-						{
-							"code": "rusregister-basemap",
-							"name": "RusRegister Base Layer",
-							"active": true,
-							"selectedByDefault": true,
-							"openByDefault": true,
-							"childLayers": [],
-							"selectType": null,
-							"serviceType": "TILE",
-							"params": {"url": "http://c.maps.rosreestr.ru/arcgis/rest/services/BaseMaps/BaseMap/MapServer/tile/{x}/{y}/{z}"}
-						}, {
-							"code": "osm",
-							"name": "OpenStreetMap",
-							"active": true,
-							"selectedByDefault": true,
-							"openByDefault": true,
-							"childLayers": [],
-							"selectType": null,
-							"serviceType": "OSM",
-							"params": {"url": "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"}
-						}], "selectType": "SINGLE", "serviceType": null, "params": {"123": "123", "333": "333"}
-				}], "selectType": "NONE", "serviceType": "TILE", "params": {}
-		}, {
-			"code": "2",
-			"name": "Overlays 1",
-			"active": true,
-			"selectedByDefault": false,
-			"openByDefault": true,
-			"childLayers": [{
-				"code": "7",
-				"name": "RusRegister Public Cadastral Map",
-				"active": true,
-				"selectedByDefault": true,
-				"openByDefault": true,
-				"childLayers": [{
-					"code": "9",
-					"name": "WFS Layer 9",
-					"active": true,
-					"selectedByDefault": true,
-					"openByDefault": true,
-					"childLayers": [],
-					"selectType": null,
-					"serviceType": "WFS",
-					"params": {
-							"style": '{"fillColor": "red", "border": "blue", "weight": 3, "opacity": 0.9, "dashArray": "dashed"}'
-						    }
-				}, {
-					"code": "12",
-					"name": "Layer 12",
-					"active": true,
-					"selectedByDefault": true,
-					"openByDefault": true,
-					"childLayers": [{
-						"code": "13",
-						"name": "SING TILE Layer 13",
-						"active": false,
-						"selectedByDefault": false,
-						"openByDefault": true,
-						"childLayers": [],
-						"selectType": "SINGLE",
-						"serviceType": "TILE",
-						"params": {"123": "123123", "234": "23423424", "3453": "45345345"}
-					}, {
-						"code": "14",
-						"name": "Layer 14",
-						"active": true,
-						"selectedByDefault": true,
-						"openByDefault": true,
-						"childLayers": [],
-						"selectType": null,
-						"serviceType": null,
-						"params": {}
-					}],
-					"selectType": "SINGLE",
-					"serviceType": "WFS",
-					"params": {"234": "55555555234",
-						    "style": '{"fillColor": "blue", "border": "green", "weight": 3, "opacity": 0.8, "dashArray": "dashed"}'
-					}
-				}],
-				"selectType": "MULTIPLE",
-				"serviceType": "WMS",
-				"params": {
-					"size": "1024,1024",
-					"f": "image",
-					"format": "PNG32",
-					"dpi": "96",
-					"url": "http://c.maps.rosreestr.ru/arcgis/rest/services/Cadastre/Cadastre/MapServer/export",
-					"transparent": "true"
-				}
-			}, {
-				"code": "10",
-				"name": "Layer 10",
-				"active": true,
-				"selectedByDefault": false,
-				"openByDefault": true,
-				"childLayers": [],
-				"selectType": "MULTIPLE",
-				"serviceType": "OSM",
-				"params": {}
-			}, {
-				"code": "11",
-				"name": "Layer 11",
-				"active": true,
-				"selectedByDefault": false,
-				"openByDefault": true,
-				"childLayers": [],
-				"selectType": "NONE",
-				"serviceType": "TILE",
-				"params": {}
-			}],
-			"selectType": "MULTIPLE",
-			"serviceType": "TILE",
-			"params": {"123": "123", "234": "234234234", "3453": "45345345"}
-		}, {
-			"code": "15",
-			"name": "Layer 1532",
-			"active": true,
-			"selectedByDefault": true,
-			"openByDefault": true,
-			"childLayers": [{
-				"code": "535",
-				"name": "Layer With A Loooooooooooooooong Name",
-				"active": true,
-				"selectedByDefault": false,
-				"openByDefault": true,
-				"childLayers": [{
-					"code": "5345",
-					"name": "34534534",
-					"active": false,
-					"selectedByDefault": false,
-					"openByDefault": true,
-					"childLayers": [],
-					"selectType": null,
-					"serviceType": null,
-					"params": {}
-				}, {
-					"code": "345",
-					"name": "345",
-					"active": false,
-					"selectedByDefault": false,
-					"openByDefault": true,
-					"childLayers": [],
-					"selectType": null,
-					"serviceType": null,
-					"params": {}
-				}, {
-					"code": "33333",
-					"name": "33333333333",
-					"active": false,
-					"selectedByDefault": false,
-					"openByDefault": true,
-					"childLayers": [],
-					"selectType": null,
-					"serviceType": null,
-					"params": {}
-				}, {
-					"code": "657",
-					"name": "567567567",
-					"active": true,
-					"selectedByDefault": false,
-					"openByDefault": true,
-					"childLayers": [{
-						"code": "233",
-						"name": "232323",
-						"active": false,
-						"selectedByDefault": false,
-						"openByDefault": true,
-						"childLayers": [],
-						"selectType": null,
-						"serviceType": null,
-						"params": {}
-					}, {
-						"code": "5445",
-						"name": "4545",
-						"active": false,
-						"selectedByDefault": false,
-						"openByDefault": true,
-						"childLayers": [],
-						"selectType": null,
-						"serviceType": null,
-						"params": {}
-					}],
-					"selectType": null,
-					"serviceType": null,
-					"params": {}
-				}],
-				"selectType": "SINGLE",
-				"serviceType": "TILE",
-				"params": {}
-			}],
-			"selectType": "MULTIPLE",
-			"serviceType": "WFS",
-			"params": {
-					"style": '{"fillColor": "yellow", "border": "#ddaaee", "weight": 3, "opacity": 0.8, "dashArray": "dashed"}'
-				    }
-		}];
+
+var tree = [
+    {
+      "code": "root",
+      "name": "All the Layers",
+      "active": true,
+      "selectedByDefault": false,
+      "openByDefault": true,
+      "childLayers": [
+    {
+      "code": "base",
+      "name": "Base layers",
+      "active": true,
+      "selectedByDefault": false,
+      "openByDefault": true,
+      "parent": {
+        "code": null,
+        "name": null,
+        "active": true,
+        "selectedByDefault": false,
+        "openByDefault": true,
+        "childLayers": [],
+        "selectType": null,
+        "serviceType": null,
+        "params": {}
+      },
+      "childLayers": [
+        {
+          "code": "osm",
+          "name": "OpenStreetMap",
+          "active": true,
+          "selectedByDefault": true,
+          "openByDefault": true,
+          "parent": {
+        "code": null,
+        "name": null,
+        "active": true,
+        "selectedByDefault": false,
+        "openByDefault": true,
+        "childLayers": [],
+        "selectType": null,
+        "serviceType": null,
+        "params": {}
+          },
+          "childLayers": [],
+          "selectType": "MULTIPLE",
+          "serviceType": "OSM",
+          "params": {
+        "url": "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
+          }
+        },
+        {
+          "code": "cosmoShooting",
+          "name": "Space Imagery",
+          "active": true,
+          "selectedByDefault": false,
+          "openByDefault": true,
+          "parent": {
+        "code": null,
+        "name": null,
+        "active": true,
+        "selectedByDefault": false,
+        "openByDefault": true,
+        "childLayers": [],
+        "selectType": null,
+        "serviceType": null,
+        "params": {}
+          },
+          "childLayers": [],
+          "selectType": "SINGLE",
+          "serviceType": null,
+          "params": {
+        "url": "http://geoportal.sovzond.ru:10090/geoserver/gwc/service/wms"
+          }
+        },
+        {
+          "code": "addressPlan",
+          "name": "Address Plan",
+          "active": true,
+          "selectedByDefault": false,
+          "openByDefault": true,
+          "parent": {
+        "code": null,
+        "name": null,
+        "active": true,
+        "selectedByDefault": false,
+        "openByDefault": true,
+        "childLayers": [],
+        "selectType": null,
+        "serviceType": null,
+        "params": {}
+          },
+          "childLayers": [],
+          "selectType": "SINGLE",
+          "serviceType": "TILE",
+          "params": {
+        "url": "http://geoportal.sovzond.ru:10090/geoserver/gwc/service/wms"
+          }
+        },
+        {
+          "code": "topo1-25000",
+          "name": "Top Base (vector 1:25000, 1:10000)",
+          "active": true,
+          "selectedByDefault": false,
+          "openByDefault": true,
+          "parent": {
+        "code": null,
+        "name": null,
+        "active": true,
+        "selectedByDefault": false,
+        "openByDefault": true,
+        "childLayers": [],
+        "selectType": null,
+        "serviceType": null,
+        "params": {}
+          },
+          "childLayers": [],
+          "selectType": "SINGLE",
+          "serviceType": "WMS",
+          "params": {
+        "service": "WMS",
+        "format": "image/png",
+        "layers": "Adygeya:Adygeya_topo",
+        "version": "1.1.1",
+        "url": "http://geoportal.sovzond.ru:10090/geoserver/gwc/service/wms",
+        "transparent": "TRUE"
+          }
+        },
+        {
+          "code": "google",
+          "name": "Google",
+          "active": true,
+          "selectedByDefault": false,
+          "openByDefault": true,
+          "parent": {
+        "code": null,
+        "name": null,
+        "active": true,
+        "selectedByDefault": false,
+        "openByDefault": true,
+        "childLayers": [],
+        "selectType": null,
+        "serviceType": null,
+        "params": {}
+          },
+          "childLayers": [],
+          "selectType": "NONE",
+          "serviceType": "GOOGLE",
+          "params": {}
+        },
+        {
+          "code": "google_terrain",
+          "name": "Google Terrain",
+          "active": true,
+          "selectedByDefault": false,
+          "openByDefault": true,
+          "parent": {
+        "code": null,
+        "name": null,
+        "active": true,
+        "selectedByDefault": false,
+        "openByDefault": true,
+        "childLayers": [],
+        "selectType": null,
+        "serviceType": null,
+        "params": {}
+          },
+          "childLayers": [],
+          "selectType": "NONE",
+          "serviceType": "GOOGLE_TERRAIN",
+          "params": {}
+        }
+      ],
+      "selectType": "SINGLE",
+      "serviceType": null,
+      "params": {}
+    },
+    {
+      "code": "overlays",
+      "name": "Overlays",
+      "active": true,
+      "selectedByDefault": false,
+      "openByDefault": true,
+      "parent": {
+        "code": null,
+        "name": null,
+        "active": true,
+        "selectedByDefault": false,
+        "openByDefault": true,
+        "childLayers": [],
+        "selectType": null,
+        "serviceType": null,
+        "params": {}
+      },
+      "childLayers": [
+        {
+          "code": "cadastral-info",
+          "name": "Cadastral Info",
+          "active": true,
+          "selectedByDefault": false,
+          "openByDefault": true,
+          "parent": {
+        "code": null,
+        "name": null,
+        "active": true,
+        "selectedByDefault": false,
+        "openByDefault": true,
+        "childLayers": [],
+        "selectType": null,
+        "serviceType": null,
+        "params": {}
+          },
+          "childLayers": [
+        {
+          "code": "public-cadastral-map",
+          "name": "Public Cadastral Map",
+          "active": true,
+          "selectedByDefault": true,
+          "openByDefault": true,
+          "parent": {
+            "code": null,
+            "name": null,
+            "active": true,
+            "selectedByDefault": false,
+            "openByDefault": true,
+            "childLayers": [],
+            "selectType": null,
+            "serviceType": null,
+            "params": {}
+          },
+          "childLayers": [
+            {
+              "code": "lands",
+              "name": "Lands (WFS Layer)",
+              "active": true,
+              "selectedByDefault": true,
+              "openByDefault": true,
+              "parent": {
+            "code": null,
+            "name": null,
+            "active": true,
+            "selectedByDefault": false,
+            "openByDefault": true,
+            "childLayers": [],
+            "selectType": null,
+            "serviceType": null,
+            "params": {}
+              },
+              "childLayers": [],
+              "selectType": "MULTIPLE",
+              "serviceType": "WFS",
+              "params": {
+            "request": "getFeature",
+            "service": "WFS",
+            "typeName": "mgis2:lands_land",
+            "style": "{\"stroke\":true,\"fillColor\":\"yellow\",\"border\":\"red\",\"weight\":3,\"opacity\":0.5,\"color\":\"red\",\"dashArray\":\"5\",\"fillOpacity\":0.1}",
+            "version": "1.0.0",
+            "outputFormat": "application/json",
+            "url": "proxy?http://localhost:8081/geoserver/mgis2/wfs",
+            "maxFeatures": "3000"
+              }
+            },
+            {
+              "code": "projected",
+              "name": "Projected (WFS Layer)",
+              "active": true,
+              "selectedByDefault": true,
+              "openByDefault": true,
+              "parent": {
+            "code": null,
+            "name": null,
+            "active": true,
+            "selectedByDefault": false,
+            "openByDefault": true,
+            "childLayers": [],
+            "selectType": null,
+            "serviceType": null,
+            "params": {}
+              },
+              "childLayers": [],
+              "selectType": "MULTIPLE",
+              "serviceType": "WFS",
+              "params": {
+            "request": "getFeature",
+            "service": "WFS",
+            "typeName": "mgis2:lands_land",
+            "version": "1.0.0",
+            "outputFormat": "application/json",
+            "url": "proxy?http://localhost:8081/geoserver/mgis2/wfs"
+              }
+            },
+            {
+              "code": "waiting-for-registration",
+              "name": "Waiting For Registration",
+              "active": true,
+              "selectedByDefault": false,
+              "openByDefault": true,
+              "parent": {
+            "code": null,
+            "name": null,
+            "active": true,
+            "selectedByDefault": false,
+            "openByDefault": true,
+            "childLayers": [],
+            "selectType": null,
+            "serviceType": null,
+            "params": {}
+              },
+              "childLayers": [],
+              "selectType": "MULTIPLE",
+              "serviceType": "WMS",
+              "params": {}
+            }
+          ],
+          "selectType": "MULTIPLE",
+          "serviceType": "WMS",
+          "params": {
+            "size": "1024,1024",
+            "f": "image",
+            "format": "PNG32",
+            "dpi": "96",
+            "url": "http://b.maps.rosreestr.ru/arcgis/rest/services/Cadastre/Cadastre/MapServer/export",
+            "transparent": "true",
+            "imageSR": "102100"
+          }
+        }
+          ],
+          "selectType": "MULTIPLE",
+          "serviceType": "WMS",
+          "params": {}
+        },
+        {
+          "code": "citybuilding-info",
+          "name": "Urban Planning Information",
+          "active": true,
+          "selectedByDefault": false,
+          "openByDefault": true,
+          "parent": {
+        "code": null,
+        "name": null,
+        "active": true,
+        "selectedByDefault": false,
+        "openByDefault": true,
+        "childLayers": [],
+        "selectType": null,
+        "serviceType": null,
+        "params": {}
+          },
+          "childLayers": [],
+          "selectType": "MULTIPLE",
+          "serviceType": null,
+          "params": {}
+        }
+      ],
+      "selectType": "MULTIPLE",
+      "serviceType": null,
+      "params": {}
+    }
+      ],
+      "selectType": "NONE",
+      "serviceType": null,
+      "params": {}
+    }
+];
 
 	var layerBuilders = {
-/*
+
 		BING: function (layerSettings) {
 		    return new L.BingLayer(layerSettings.params.url);
 		},
@@ -248,7 +405,7 @@
 		GOOGLE_TERRAIN: function (layerSettings) {
 		    return new L.Google("TERRAIN");
 		}
-*/
+
 	};
 
 	new L.Control.LayerTreeControl({	layerTree: tree,
