--- a/examples/basic-example.htm
+++ b/examples/basic-example.htm
@@ -44,17 +44,6 @@
 					"active": true,
 					"selectedByDefault": false,
 					"openByDefault": true,
-					"parent": {
-						"code": null,
-						"name": null,
-						"active": true,
-						"selectedByDefault": false,
-						"openByDefault": true,
-						"childLayers": [],
-						"selectType": null,
-						"serviceType": null,
-						"params": {}
-					},
 					"childLayers": [
 						{
 							"code": "osm",
@@ -62,17 +51,6 @@
 							"active": true,
 							"selectedByDefault": true,
 							"openByDefault": true,
-							"parent": {
-								"code": null,
-								"name": null,
-								"active": true,
-								"selectedByDefault": false,
-								"openByDefault": true,
-								"childLayers": [],
-								"selectType": null,
-								"serviceType": null,
-								"params": {}
-							},
 							"childLayers": [],
 							"selectType": "MULTIPLE",
 							"serviceType": "OSM",
@@ -81,70 +59,11 @@
 							}
 						},
 						{
-							"code": "cosmoShooting",
-							"name": "Space Imagery",
-							"active": true,
-							"selectedByDefault": false,
-							"openByDefault": true,
-							"parent": {
-								"code": null,
-								"name": null,
-								"active": true,
-								"selectedByDefault": false,
-								"openByDefault": true,
-								"childLayers": [],
-								"selectType": null,
-								"serviceType": null,
-								"params": {}
-							},
-							"childLayers": [],
-							"selectType": "SINGLE",
-							"serviceType": null,
-							"params": {
-								"url": "http://geoportal.sovzond.ru:10090/geoserver/gwc/service/wms"
-							}
-						},
-						{
-							"code": "addressPlan",
-							"name": "Address Plan",
-							"active": true,
-							"selectedByDefault": false,
-							"openByDefault": true,
-							"parent": {
-								"code": null,
-								"name": null,
-								"active": true,
-								"selectedByDefault": false,
-								"openByDefault": true,
-								"childLayers": [],
-								"selectType": null,
-								"serviceType": null,
-								"params": {}
-							},
-							"childLayers": [],
-							"selectType": "SINGLE",
-							"serviceType": "TILE",
-							"params": {
-								"url": "http://geoportal.sovzond.ru:10090/geoserver/gwc/service/wms"
-							}
-						},
-						{
 							"code": "topo1-25000",
 							"name": "Top Base (vector 1:25000, 1:10000)",
 							"active": true,
 							"selectedByDefault": false,
 							"openByDefault": true,
-							"parent": {
-								"code": null,
-								"name": null,
-								"active": true,
-								"selectedByDefault": false,
-								"openByDefault": true,
-								"childLayers": [],
-								"selectType": null,
-								"serviceType": null,
-								"params": {}
-							},
 							"childLayers": [],
 							"selectType": "SINGLE",
 							"serviceType": "WMS",
@@ -163,17 +82,6 @@
 							"active": true,
 							"selectedByDefault": false,
 							"openByDefault": true,
-							"parent": {
-								"code": null,
-								"name": null,
-								"active": true,
-								"selectedByDefault": false,
-								"openByDefault": true,
-								"childLayers": [],
-								"selectType": null,
-								"serviceType": null,
-								"params": {}
-							},
 							"childLayers": [],
 							"selectType": "NONE",
 							"serviceType": "GOOGLE",
@@ -185,21 +93,28 @@
 							"active": true,
 							"selectedByDefault": false,
 							"openByDefault": true,
-							"parent": {
-								"code": null,
-								"name": null,
-								"active": true,
-								"selectedByDefault": false,
-								"openByDefault": true,
-								"childLayers": [],
-								"selectType": null,
-								"serviceType": null,
-								"params": {}
-							},
 							"childLayers": [],
 							"selectType": "NONE",
 							"serviceType": "GOOGLE_TERRAIN",
 							"params": {}
+						},
+						{
+							"code": "rtk",
+							"name": "rtk",
+							"active": true,
+							"selectedByDefault": false,
+							"openByDefault": true,
+							"selectType": "MULTIPLE",
+							"serviceType": "WMS",
+							"params": {
+								"request": "getMap",
+								"service": "WMS",
+								"format": "image/png",
+								"layers": "rtk:L1622982",
+								"style": "{\"stroke\":true,\"fillColor\":\"grey\",\"border\":\"cyan\",\"weight\":1,\"opacity\":0.5,\"color\":\"red\",\"dashArray\":\"3\",\"fillOpacity\":0.1}",
+								"version": "1.1.0",
+								"url": "http://geoportal.sovzond.ru:10090/geoserver/rtk/wms"
+							}
 						}
 					],
 					"selectType": "SINGLE",
@@ -212,56 +127,32 @@
 					"active": true,
 					"selectedByDefault": false,
 					"openByDefault": true,
-					"parent": {
-						"code": null,
-						"name": null,
-						"active": true,
-						"selectedByDefault": false,
-						"openByDefault": true,
-						"childLayers": [],
-						"selectType": null,
-						"serviceType": null,
-						"params": {}
-					},
 					"childLayers": [
 						{
-							"code": "cadastral-info-cities",
-							"name": "Cities",
+							"code": "aelectro",
+							"name": "Adygeya:elektro",
 							"active": true,
 							"selectedByDefault": false,
 							"openByDefault": true,
-							"parent": {
-								"code": null,
-								"name": null,
-								"active": true,
-								"selectedByDefault": true,
-								"openByDefault": true,
-								"childLayers": [],
-								"selectType": null,
-								"serviceType": null,
-								"params": {}
-							},
 							"selectType": "MULTIPLE",
-							"serviceType": "WMS",
-							"params": {},
+							"serviceType": "WFS",
+							"params": {
+								"request": "getFeature",
+								"service": "WFS",
+								"typeName": "Adygeya:elektro",
+								"style": "{\"stroke\":true,\"fillColor\":\"green\",\"border\":\"cyan\",\"weight\":2,\"opacity\":0.5,\"color\":\"red\",\"dashArray\":\"3\",\"fillOpacity\":0.1}",
+								"version": "1.0.0",
+								"outputFormat": "application/json",
+								"url": "http://geoportal.sovzond.ru:10090/geoserver/Adygeya/wfs",
+								"maxFeatures": "3000"
+							},
 							"childLayers": [
 								{
-									"code": "public-cadastral-map",
+									"code": "goroda",
 									"name": "rtk:Goroda",
 									"active": true,
 									"selectedByDefault": false,
 									"openByDefault": true,
-									"parent": {
-										"code": null,
-										"name": null,
-										"active": true,
-										"selectedByDefault": false,
-										"openByDefault": true,
-										"childLayers": [],
-										"selectType": null,
-										"serviceType": null,
-										"params": {}
-									},
 									"selectType": "MULTIPLE",
 									"serviceType": "WFS",
 									"params": {
@@ -276,22 +167,11 @@
 									},
 									"childLayers": [
 										{
-											"code": "lands",
+											"code": "adygea10",
 											"name": "Adygeya:LAYER10_line",
 											"active": true,
 											"selectedByDefault": false,
 											"openByDefault": true,
-											"parent": {
-												"code": null,
-												"name": null,
-												"active": true,
-												"selectedByDefault": false,
-												"openByDefault": true,
-												"childLayers": [],
-												"selectType": null,
-												"serviceType": null,
-												"params": {}
-											},
 											"childLayers": [],
 											"selectType": "MULTIPLE",
 											"serviceType": "WFS",
@@ -307,22 +187,11 @@
 											}
 										},
 										{
-											"code": "projected",
+											"code": "adygeaPrevlik",
 											"name": "Adygeya:prevlik",
 											"active": true,
 											"selectedByDefault": true,
 											"openByDefault": true,
-											"parent": {
-												"code": null,
-												"name": null,
-												"active": true,
-												"selectedByDefault": true,
-												"openByDefault": true,
-												"childLayers": [],
-												"selectType": null,
-												"serviceType": null,
-												"params": {}
-											},
 											"childLayers": [],
 											"selectType": "MULTIPLE",
 											"serviceType": "WFS",
@@ -334,28 +203,6 @@
 												"outputFormat": "application/json",
 												"url": "http://geoportal.sovzond.ru:10090/geoserver/Adygeya/wfs"
 											}
-										},
-										{
-											"code": "waiting-for-registration",
-											"name": "Waiting For Registration",
-											"active": true,
-											"selectedByDefault": false,
-											"openByDefault": true,
-											"parent": {
-												"code": null,
-												"name": null,
-												"active": true,
-												"selectedByDefault": false,
-												"openByDefault": true,
-												"childLayers": [],
-												"selectType": null,
-												"serviceType": null,
-												"params": {}
-											},
-											"childLayers": [],
-											"selectType": "MULTIPLE",
-											"serviceType": "WMS",
-											"params": {}
 										}
 									]
 								}
@@ -367,21 +214,18 @@
 							"active": true,
 							"selectedByDefault": false,
 							"openByDefault": true,
-							"parent": {
-								"code": null,
-								"name": null,
-								"active": true,
-								"selectedByDefault": false,
-								"openByDefault": true,
-								"childLayers": [],
-								"selectType": null,
-								"serviceType": null,
-								"params": {}
-							},
 							"childLayers": [],
 							"selectType": "MULTIPLE",
-							"serviceType": null,
-							"params": {}
+							"serviceType": "WFS",
+							"params": {
+								"request": "getFeature",
+								"service": "WFS",
+								"style": "{\"stroke\":true,\"fillColor\":\"violet\",\"border\":\"yellow\",\"weight\":1,\"opacity\":0.5,\"color\":\"red\",\"dashArray\":\"5\",\"fillOpacity\":0.1}",
+								"typeName": "Adygeya:LAYER10_line",
+								"version": "1.0.0",
+								"outputFormat": "application/json",
+								"url": "http://geoportal.sovzond.ru:10090/geoserver/Adygeya/wfs"
+							}
 						}
 					],
 					"selectType": "MULTIPLE",
