How to implement popups #1 - onPopup property can be added in WFS layers' configuration to implement popups

--- a/examples/basic-example.htm
+++ b/examples/basic-example.htm
@@ -32,176 +32,185 @@
 
 	var tree = [
 		{
-			"code": "root",
-			"name": "All the Layers",
-			"active": true,
-			"selectedByDefault": false,
-			"openByDefault": true,
-			"childLayers": [
+			code: "root",
+			name: "All the Layers",
+			active: true,
+			selectedByDefault: false,
+			openByDefault: true,
+			childLayers: [
 				{
-					"code": "base",
-					"name": "Base layers",
-					"active": true,
-					"selectedByDefault": false,
-					"openByDefault": true,
-					"childLayers": [
+					code: "base",
+					name: "Base layers",
+					active: true,
+					selectedByDefault: false,
+					openByDefault: true,
+					childLayers: [
 						{
-							"code": "osm",
-							"name": "OpenStreetMap",
-							"active": true,
-							"selectedByDefault": true,
-							"openByDefault": true,
-							"childLayers": [],
-							"selectType": "MULTIPLE",
-							"serviceType": "OSM",
-							"params": {
-								"url": "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
+							code: "osm",
+							name: "OpenStreetMap",
+							active: true,
+							selectedByDefault: true,
+							openByDefault: true,
+							childLayers: [],
+							selectType: "MULTIPLE",
+							serviceType: "OSM",
+							params: {
+								url: "http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png"
 							}
 						},
 						{
-							"code": "topo1-25000",
-							"name": "Top Base (vector 1:25000, 1:10000)",
-							"active": true,
-							"selectedByDefault": false,
-							"openByDefault": true,
-							"childLayers": [],
-							"selectType": "SINGLE",
-							"serviceType": "WMS",
-							"params": {
-								"service": "WMS",
-								"format": "image/png",
-								"layers": "Adygeya:Adygeya_topo",
-								"version": "1.1.1",
-								"url": "http://geoportal.sovzond.ru:10090/geoserver/gwc/service/wms",
-								"transparent": "TRUE"
+							code: "topo1-25000",
+							name: "Top Base (vector 1:25000, 1:10000)",
+							active: true,
+							selectedByDefault: false,
+							openByDefault: true,
+							childLayers: [],
+							selectType: "SINGLE",
+							serviceType: "WMS",
+							params: {
+								service: "WMS",
+								format: "image/png",
+								layers: "Adygeya:Adygeya_topo",
+								version: "1.1.1",
+								url: "http://geoportal.sovzond.ru:10090/geoserver/gwc/service/wms",
+								transparent: "TRUE"
 							}
 						},
 						{
-							"code": "google",
-							"name": "Google",
-							"active": true,
-							"selectedByDefault": false,
-							"openByDefault": true,
-							"childLayers": [],
-							"selectType": "NONE",
-							"serviceType": "GOOGLE",
-							"params": {}
+							code: "google",
+							name: "Google",
+							active: true,
+							selectedByDefault: false,
+							openByDefault: true,
+							childLayers: [],
+							selectType: "NONE",
+							serviceType: "GOOGLE",
+							params: {}
 						},
 						{
-							"code": "google_terrain",
-							"name": "Google Terrain",
-							"active": true,
-							"selectedByDefault": false,
-							"openByDefault": true,
-							"childLayers": [],
-							"selectType": "NONE",
-							"serviceType": "GOOGLE_TERRAIN",
-							"params": {}
+							code: "google_terrain",
+							name: "Google Terrain",
+							active: true,
+							selectedByDefault: false,
+							openByDefault: true,
+							childLayers: [],
+							selectType: "NONE",
+							serviceType: "GOOGLE_TERRAIN",
+							params: {}
 						},
 						{
-							"code": "rtk",
-							"name": "rtk",
-							"active": true,
-							"selectedByDefault": false,
-							"openByDefault": true,
-							"selectType": "MULTIPLE",
-							"serviceType": "WMS",
-							"params": {
-								"request": "getMap",
-								"service": "WMS",
-								"format": "image/png",
-								"layers": "rtk:L1622982",
-								"style": "{\"stroke\":true,\"fillColor\":\"grey\",\"border\":\"cyan\",\"weight\":1,\"opacity\":0.5,\"color\":\"red\",\"dashArray\":\"3\",\"fillOpacity\":0.1}",
-								"version": "1.1.0",
-								"url": "http://geoportal.sovzond.ru:10090/geoserver/rtk/wms"
+							code: "rtk",
+							name: "rtk",
+							active: true,
+							selectedByDefault: false,
+							openByDefault: true,
+							selectType: "MULTIPLE",
+							serviceType: "WMS",
+							params: {
+								request: "getMap",
+								service: "WMS",
+								format: "image/png",
+								layers: "rtk:L1622982",
+								style: "{\"stroke\":true,\"fillColor\":\"grey\",\"border\":\"cyan\",\"weight\":1,\"opacity\":0.5,\"color\":\"red\",\"dashArray\":\"3\",\"fillOpacity\":0.1}",
+								version: "1.1.0",
+								url: "http://geoportal.sovzond.ru:10090/geoserver/rtk/wms"
 							}
 						}
 					],
-					"selectType": "SINGLE",
-					"serviceType": null,
-					"params": {}
+					selectType: "SINGLE",
+					serviceType: null,
+					params: {}
 				},
 				{
-					"code": "overlays",
-					"name": "Overlays",
-					"active": true,
-					"selectedByDefault": false,
-					"openByDefault": true,
-					"childLayers": [
+					code: "overlays",
+					name: "Overlays",
+					active: true,
+					selectedByDefault: false,
+					openByDefault: true,
+					childLayers: [
 						{
-							"code": "aelectro",
-							"name": "Adygeya:elektro",
-							"active": true,
-							"selectedByDefault": false,
-							"openByDefault": true,
-							"selectType": "MULTIPLE",
-							"serviceType": "WFS",
-							"params": {
-								"request": "getFeature",
-								"service": "WFS",
-								"typeName": "Adygeya:elektro",
-								"style": "{\"stroke\":true,\"fillColor\":\"green\",\"border\":\"cyan\",\"weight\":2,\"opacity\":0.5,\"color\":\"red\",\"dashArray\":\"3\",\"fillOpacity\":0.1}",
-								"version": "1.0.0",
-								"outputFormat": "application/json",
-								"url": "http://geoportal.sovzond.ru:10090/geoserver/Adygeya/wfs",
-								"maxFeatures": "3000"
+							code: "aelectro",
+							name: "Adygeya:elektro",
+							active: true,
+							selectedByDefault: false,
+							openByDefault: true,
+							selectType: "MULTIPLE",
+							serviceType: "WFS",
+							params: {
+								request: "getFeature",
+								service: "WFS",
+								typeName: "Adygeya:elektro",
+								style: "{\"stroke\":true,\"fillColor\":\"green\",\"border\":\"cyan\",\"weight\":2,\"opacity\":0.5,\"color\":\"red\",\"dashArray\":\"3\",\"fillOpacity\":0.1}",
+								version: "1.0.0",
+								outputFormat: "application/json",
+								url: "http://geoportal.sovzond.ru:10090/geoserver/Adygeya/wfs",
+								maxFeatures: "3000"
 							},
-							"childLayers": [
+							childLayers: [
 								{
-									"code": "goroda",
-									"name": "rtk:Goroda",
-									"active": true,
-									"selectedByDefault": false,
-									"openByDefault": true,
-									"selectType": "MULTIPLE",
-									"serviceType": "WFS",
-									"params": {
-										"request": "getFeature",
-										"service": "WFS",
-										"typeName": "rtk:STAT_SUBJ",
-										"style": "{\"stroke\":true,\"fillColor\":\"violet\",\"border\":\"orange\",\"weight\":3,\"opacity\":0.5,\"color\":\"red\",\"dashArray\":\"5\",\"fillOpacity\":0.1}",
-										"version": "1.0.0",
-										"outputFormat": "application/json",
-										"url": "http://geoportal.sovzond.ru:10090/geoserver/rtk/wfs",
-										"maxFeatures": "3000"
+									code: "goroda",
+									name: "rtk:Goroda",
+									active: true,
+									selectedByDefault: false,
+									openByDefault: true,
+									selectType: "MULTIPLE",
+									serviceType: "WFS",
+									params: {
+										request: "getFeature",
+										service: "WFS",
+										typeName: "rtk:STAT_SUBJ",
+										style: "{\"stroke\":true,\"fillColor\":\"violet\",\"border\":\"orange\",\"weight\":3,\"opacity\":0.5,\"color\":\"red\",\"dashArray\":\"5\",\"fillOpacity\":0.1}",
+										version: "1.0.0",
+										outputFormat: "application/json",
+										url: "http://geoportal.sovzond.ru:10090/geoserver/rtk/wfs",
+										maxFeatures: "3000"
 									},
-									"childLayers": [
+									childLayers: [
 										{
-											"code": "adygea10",
-											"name": "Adygeya:LAYER10_line",
-											"active": true,
-											"selectedByDefault": false,
-											"openByDefault": true,
-											"childLayers": [],
-											"selectType": "MULTIPLE",
-											"serviceType": "WFS",
-											"params": {
-												"request": "getFeature",
-												"service": "WFS",
-												"typeName": "Adygeya:LAYER10_line",
-												"style": "{\"stroke\":true,\"fillColor\":\"yellow\",\"border\":\"red\",\"weight\":3,\"opacity\":0.5,\"color\":\"red\",\"dashArray\":\"5\",\"fillOpacity\":0.1}",
-												"version": "1.0.0",
-												"outputFormat": "application/json",
-												"url": "http://geoportal.sovzond.ru:10090/geoserver/Adygeya/wfs",
-												"maxFeatures": "3000"
+											code: "adygea10",
+											name: "Adygeya:LAYER10_line",
+											active: true,
+											selectedByDefault: false,
+											openByDefault: true,
+											childLayers: [],
+											selectType: "MULTIPLE",
+											serviceType: "WFS",
+											params: {
+												request: "getFeature",
+												service: "WFS",
+												typeName: "Adygeya:LAYER10_line",
+												style: "{\"stroke\":true,\"fillColor\":\"yellow\",\"border\":\"red\",\"weight\":3,\"opacity\":0.5,\"color\":\"red\",\"dashArray\":\"5\",\"fillOpacity\":0.1}",
+												version: "1.0.0",
+												outputFormat: "application/json",
+												url: "http://geoportal.sovzond.ru:10090/geoserver/Adygeya/wfs",
+												maxFeatures: "3000"
 											}
 										},
 										{
-											"code": "adygeaPrevlik",
-											"name": "Adygeya:prevlik",
-											"active": true,
-											"selectedByDefault": true,
-											"openByDefault": true,
-											"childLayers": [],
-											"selectType": "MULTIPLE",
-											"serviceType": "WFS",
-											"params": {
-												"request": "getFeature",
-												"service": "WFS",
-												"typeName": "Adygeya:prevlik",
-												"version": "1.0.0",
-												"outputFormat": "application/json",
-												"url": "http://geoportal.sovzond.ru:10090/geoserver/Adygeya/wfs"
+											code: "adygeaPrevlik",
+											name: "Adygeya:prevlik",
+											active: true,
+											selectedByDefault: true,
+											openByDefault: true,
+											childLayers: [],
+											selectType: "MULTIPLE",
+											serviceType: "WFS",
+											onPopup: function (layer) {
+												var content = "<table>";
+												var properties = layer.feature.properties;
+												for (var i in properties) {
+													content += "<tr><td>" + i + "</td><td>" + properties[i] + "</td></tr>";
+												}
+												content += "</table>";
+												return content;
+											},
+											params: {
+												request: "getFeature",
+												service: "WFS",
+												typeName: "Adygeya:prevlik",
+												version: "1.0.0",
+												outputFormat: "application/json",
+												url: "http://geoportal.sovzond.ru:10090/geoserver/Adygeya/wfs"
 											}
 										}
 									]
@@ -209,33 +218,33 @@
 							]
 						},
 						{
-							"code": "citybuilding-info",
-							"name": "Urban Planning Information",
-							"active": true,
-							"selectedByDefault": false,
-							"openByDefault": true,
-							"childLayers": [],
-							"selectType": "MULTIPLE",
-							"serviceType": "WFS",
-							"params": {
-								"request": "getFeature",
-								"service": "WFS",
-								"style": "{\"stroke\":true,\"fillColor\":\"violet\",\"border\":\"yellow\",\"weight\":1,\"opacity\":0.5,\"color\":\"red\",\"dashArray\":\"5\",\"fillOpacity\":0.1}",
-								"typeName": "Adygeya:LAYER10_line",
-								"version": "1.0.0",
-								"outputFormat": "application/json",
-								"url": "http://geoportal.sovzond.ru:10090/geoserver/Adygeya/wfs"
+							code: "citybuilding-info",
+							name: "Urban Planning Information",
+							active: true,
+							selectedByDefault: false,
+							openByDefault: true,
+							childLayers: [],
+							selectType: "MULTIPLE",
+							serviceType: "WFS",
+							params: {
+								request: "getFeature",
+								service: "WFS",
+								style: "{\"stroke\":true,\"fillColor\":\"violet\",\"border\":\"yellow\",\"weight\":1,\"opacity\":0.5,\"color\":\"red\",\"dashArray\":\"5\",\"fillOpacity\":0.1}",
+								typeName: "Adygeya:LAYER10_line",
+								version: "1.0.0",
+								outputFormat: "application/json",
+								url: "http://geoportal.sovzond.ru:10090/geoserver/Adygeya/wfs"
 							}
 						}
 					],
-					"selectType": "MULTIPLE",
-					"serviceType": null,
-					"params": {}
+					selectType: "MULTIPLE",
+					serviceType: null,
+					params: {}
 				}
 			],
-			"selectType": "NONE",
-			"serviceType": null,
-			"params": {}
+			selectType: "NONE",
+			serviceType: null,
+			params: {}
 		}
 	];
 
